# python-rye-uv-monorepo

./: README.md  pyproject.toml
projects/project-a/: README.md  pyproject.toml
projects/project-a/src/project_a/: __main__.py
projects/project-b/: README.md  pyproject.toml
projects/project-b/src/project_b/: lib.py
src/root/: __main__.py
