[project]
name = "project-a"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kaito Sawada", email = "mitosawada@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project_a"]